--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,26 @@
-theme: jekyll-theme-slate
+# Site settings
+name: Less Or More
+email: frt1107.com
+author: 樊瑞婷
+url: http://ruitingfan.github.io
+resume_site: http://frt1107.com
+github: https://github.com/frt1107
+baseurl: "/"
+description: Actually, less is more!
+meta_description: 樊瑞婷;个人博客;学而不思则罔;思而不学则殆;生命不止;折腾不休
+motto: It's our wits that make us men.
+banner: 学而不思则罔，思而不学则殆。
+
+#permalink: /:categories/:year/:month/:day/:title/
+permalink: /:year/:month/:day/:title/
+paginate: 10
+
+exclude: ['README.md', 'Gemfile.lock', 'Gemfile', 'Rakefile']
+
+github_username: frt1107
+
+# Build settings
+markdown: kramdown
+
+baidu_analysis: 94be4b0f9fc5d94cc0d0415ea6761ae9
+
