--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: 樊瑞婷
 url: http://ruitingfan.github.io
 resume_site: http://frt1107.com
 github: https://github.com/frt1107
-baseurl: "/"
+baseurl: ""
 description: Actually, less is more!
 meta_description: 樊瑞婷;个人博客;学而不思则罔;思而不学则殆;生命不止;折腾不休
 motto: It's our wits that make us men.
