--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-name: Less Or More
+name: frt的个人博客
 email: frt1107.com
 author: 樊瑞婷
 url: http://ruitingfan.github.io
 resume_site: http://frt1107.com
 github: https://github.com/frt1107
 baseurl: ""
-description: Actually, less is more!
+description: 希望就在前方，为梦想插上翅膀!
 meta_description: 樊瑞婷;个人博客;学而不思则罔;思而不学则殆;生命不止;折腾不休
 motto: It's our wits that make us men.
 banner: 学而不思则罔，思而不学则殆。
